added API request

--- a/src/app/stocklist/stocklist.component.html
+++ b/src/app/stocklist/stocklist.component.html
@@ -1,3 +1,4 @@
+<app-stock-input></app-stock-input> &nbsp; <button mat-raised-button color="primary">Aggiungi</button>
 <mat-card *ngFor="let stock of stocks" class="example-card">
   <mat-card-header>
     <div mat-card-avatar class="example-header-image"></div>
