--- a/src/app/stock-input/stock-input.component.html
+++ b/src/app/stock-input/stock-input.component.html
@@ -1,1 +1,11 @@
-<p>stock-input works!</p>
+<mat-form-field class="example-form-field">
+  <mat-label>Ricerca Stocks</mat-label>
+  <input matInput type="text" [(ngModel)]="value" (input)="searchStocks()">
+  <button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="clearInput()">
+    <mat-icon>close</mat-icon>
+  </button>
+</mat-form-field>
+
+<ul *ngIf="stocks.length > 0">
+  <li *ngFor="let stock of stocks">{{ stock.nameCompany }}</li>
+</ul>
