fixed input and added service

--- a/src/app/stock-input/stock-input.component.html
+++ b/src/app/stock-input/stock-input.component.html
@@ -1,1 +1,7 @@
-<p>stock-input works!</p>
+<p>ciao</p>
+<div>
+  <mat-form-field>
+    <input matInput [(ngModel)]="symbol" placeholder="Symbol">
+  </mat-form-field>
+  <button mat-raised-button color="primary" (click)="fetchStockProfile()">Submit</button>
+</div>
