--- a/src/app/stocklist/stocklist.component.html
+++ b/src/app/stocklist/stocklist.component.html
@@ -2,12 +2,18 @@
 <mat-card *ngFor="let stock of stocks$ | async" class="example-card">
   <mat-card-header>
     <div mat-card-avatar class="example-header-image"></div>
-    <mat-card-title>{{ stock.name }}</mat-card-title>
-    <mat-card-subtitle
-      >Prezzo iniziale: {{ stock.initialPrice }} <br />
-      Prezzo attuale: {{ stock.currentPrice }} <br />
-      Symbol: {{ stock.ticker }}
-    </mat-card-subtitle>
+
+    <mat-card-content>
+      <mat-card-subtitle
+        >Company Name: {{ stock.nameCompany }}</mat-card-subtitle
+      >
+      <mat-card-subtitle
+        >Current Price: {{ stock.currentPrice }}</mat-card-subtitle
+      >
+      <mat-card-subtitle
+        >Previous Close Price: {{ stock.initialPrice }}</mat-card-subtitle
+      >
+    </mat-card-content>
   </mat-card-header>
 
   <mat-card-actions>
