--- a/src/app/stocklist/stocklist.component.html
+++ b/src/app/stocklist/stocklist.component.html
@@ -8,16 +8,16 @@
         >Company Name: {{ stock.nameCompany }}</mat-card-subtitle
       >
       <mat-card-subtitle
-        >Current Price: {{ stock.currentPrice }}</mat-card-subtitle
+        >Latest Price: {{ stock.currentPrice }} {{stock.currency}}</mat-card-subtitle
       >
       <mat-card-subtitle
-        >Previous Close Price: {{ stock.initialPrice }}</mat-card-subtitle
+        >Previous Close Price: {{ stock.initialPrice }} {{stock.currency}}</mat-card-subtitle
       >
     </mat-card-content>
   </mat-card-header>
 
   <mat-card-actions>
-    <button mat-button>Dettagli</button>
+    <button mat-button (click)="showDetails(stock.displaySymbol)">Dettagli</button>
   </mat-card-actions>
 
   <mat-card-actions>
