--- a/src/app/stock-input/stock-input.component.html
+++ b/src/app/stock-input/stock-input.component.html
@@ -1,13 +1,8 @@
-<p>ciao</p>
-<div>
+<div class="input-container">
   <mat-form-field>
-    <input matInput [(ngModel)]="symbol" placeholder="Symbol" />
+    <mat-label>Stocks</mat-label>
+    <input matInput value="Insert Thicker" [(ngModel)]="symbol" placeholder="Insert Thicker">
   </mat-form-field>
-  <button
-    mat-raised-button
-    color="primary"
-    (click)="fetchStockProfileAndQuote()"
-  >
-    Submit
-  </button>
+  <button mat-raised-button color="primary" class="thickerButton" (click)="fetchStockProfileAndQuote()">Submit</button>
+
 </div>
