--- a/src/app/stock-input/stock-input.component.css
+++ b/src/app/stock-input/stock-input.component.css
@@ -29,3 +29,9 @@ section {
   justify-content: center;
   width: 120px;
 }
+
+.example-form {
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+}
