--- a/src/app/stocklist/stocklist.component.css
+++ b/src/app/stocklist/stocklist.component.css
@@ -1,9 +1,40 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
 .example-card {
   margin-bottom: 10px;
-  max-width: 400px;
+  max-width: 300px;
+  position: relative;
 }
 
 .example-header-image {
-  /* background-image: url("https://material.angular.io/assets/img/examples/shiba1.jpg"); */
   background-size: cover;
+}
+
+.center-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.center-card button {
+  margin-top: 10px; /* Aggiungi un margine superiore se necessario */
+}
+
+.example-card button.delete-button {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+}
+
+button.details-button {
+  position: absolute;
+  top: 5px;
+  right: 5px;
 }
