--- a/src/app/stocklist/stocklist.component.html
+++ b/src/app/stocklist/stocklist.component.html
@@ -1,27 +1,19 @@
-<app-stock-input></app-stock-input>
-<mat-card *ngFor="let stock of stocks$ | async" class="example-card">
+<title>Stock Watch</title>
+<div class="container">
+  <h1 style="background-image: url('https://ibb.co/PtRty4g')">STOCK WATCH</h1>
+  <app-stock-input></app-stock-input>
+  <mat-card *ngFor="let stock of stocks$ | async" class="example-card">
+  <button mat-button color="warn" class="delete-button" (click)="deleteStock(stock)">X</button>
   <mat-card-header>
     <div mat-card-avatar class="example-header-image" [ngStyle]="{ 'background-image': 'url(' + stock.logo + ')' }"> </div>
 
     <mat-card-content>
       <mat-card-subtitle
-        >Company Name: {{ stock.nameCompany }}</mat-card-subtitle
-      >
-      <mat-card-subtitle
-        >Latest Price: {{ stock.currentPrice }} {{stock.currency}}</mat-card-subtitle
-      >
-      <mat-card-subtitle
-        >Previous Close Price: {{ stock.initialPrice }} {{stock.currency}}</mat-card-subtitle
-      >
+        ><h1>{{ stock.nameCompany }}</h1></mat-card-subtitle>
+      <mat-card-subtitle>Latest Price: {{ stock.currentPrice }} {{stock.currency}}</mat-card-subtitle>
+      <mat-card-subtitle>Previous Close Price: {{ stock.initialPrice }} {{stock.currency}}</mat-card-subtitle>
     </mat-card-content>
   </mat-card-header>
-
-  <mat-card-actions>
-    <button mat-button (click)="showDetails(stock.displaySymbol)">Dettagli</button>
-  </mat-card-actions>
-
-  <mat-card-actions>
-    <button mat-button (click)="deleteStock(stock)">Elimina</button>
-  </mat-card-actions>
-
+    <button mat-button color="primary" (click)="showDetails(stock.displaySymbol)">Details</button>
 </mat-card>
+</div>
