fixed details and input button

--- a/src/app/stock-input/stock-input.component.html
+++ b/src/app/stock-input/stock-input.component.html
@@ -1,8 +1,10 @@
 <div class="input-container">
-  <mat-form-field>
+  <mat-form-field class="tickerFormField">
     <mat-label>Stocks</mat-label>
     <input matInput value="Insert Thicker" [(ngModel)]="symbol" placeholder="Insert Thicker">
+
   </mat-form-field>
-  <button mat-raised-button color="primary" class="thickerButton" (click)="fetchStockProfileAndQuote()">Submit</button>
+  <button mat-fab matSuffix color="primary" class="thickerButton" (click)="fetchStockProfileAndQuote()">
+    <mat-icon>search</mat-icon> </button>
 
 </div>
