--- a/src/app/stock-details/stock-details.component.html
+++ b/src/app/stock-details/stock-details.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="stockData">
+<!-- <div *ngIf="stockData">
   <h2>Stock Details</h2>
   <p>
     Current Date: {{ stockData.currentDate?.month }}/{{
@@ -20,4 +20,43 @@
   <p>Change: {{ stockData.twoMonthAgo?.change }}</p>
 
   <button (click)="goBack()">Indietro</button>
+</div> -->
+
+
+<div class="container">
+
+  <mat-card class="example-card" *ngIf="stockData">
+    <mat-card-header>
+      <mat-card-title> Current Month: {{ stockData.currentDate?.month }}/{{
+        stockData.currentDate?.year}} </mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <div><mat-icon>trending_down</mat-icon></div>
+      <p>Change: {{ stockData.currentDate?.change }} {{stockData.currency}}</p>
+    </mat-card-content>
+
+  </mat-card>
+
+  <mat-card class="example-card">
+    <mat-card-header>
+      <mat-card-title>Shiba Inu</mat-card-title>
+      <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <p>This card indeterminates progress bar.</p>
+    </mat-card-content>
+
+  </mat-card>
+
+  <mat-card class="example-card">
+    <mat-card-header>
+      <mat-card-title>Shiba Inu</mat-card-title>
+      <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <p>This card indeterminates progress bar.</p>
+    </mat-card-content>
+
+  </mat-card>
+
 </div>
