--- a/src/app/stocklist/stocklist.component.html
+++ b/src/app/stocklist/stocklist.component.html
@@ -3,17 +3,19 @@
   <h1 style="background-image: url('https://ibb.co/PtRty4g')">STOCK WATCH</h1>
   <app-stock-input></app-stock-input>
   <mat-card *ngFor="let stock of stocks$ | async" class="example-card">
-  <button mat-button color="warn" class="delete-button" (click)="deleteStock(stock)">X</button>
-  <mat-card-header>
-    <div mat-card-avatar class="example-header-image" [ngStyle]="{ 'background-image': 'url(' + stock.logo + ')' }"> </div>
+    <button mat-icon-button color="warn" class="delete-button" (click)="deleteStock(stock)">X</button>
+    <mat-card-header>
+      <div mat-card-avatar class="example-header-image" [ngStyle]="{ 'background-image': 'url(' + stock.logo + ')' }">
+      </div>
 
-    <mat-card-content>
-      <mat-card-subtitle
-        ><h1>{{ stock.nameCompany }}</h1></mat-card-subtitle>
-      <mat-card-subtitle>Latest Price: {{ stock.currentPrice }} {{stock.currency}}</mat-card-subtitle>
-      <mat-card-subtitle>Previous Close Price: {{ stock.initialPrice }} {{stock.currency}}</mat-card-subtitle>
-    </mat-card-content>
-  </mat-card-header>
+      <mat-card-content>
+        <mat-card-subtitle>
+          <h1>{{ stock.nameCompany }}</h1>
+        </mat-card-subtitle>
+        <mat-card-subtitle>Latest Price: {{ stock.currentPrice }} {{stock.currency}}</mat-card-subtitle>
+        <mat-card-subtitle>Previous Close Price: {{ stock.initialPrice }} {{stock.currency}}</mat-card-subtitle>
+      </mat-card-content>
+    </mat-card-header>
     <button mat-button color="primary" (click)="showDetails(stock.displaySymbol)">Details</button>
-</mat-card>
+  </mat-card>
 </div>
