--- a/src/app/stock-details/stock-details.component.css
+++ b/src/app/stock-details/stock-details.component.css
@@ -1,7 +1,3 @@
-.example-card {
-  max-width: 400px;
-}
-
 .container{
   display: flex;
   justify-content: center;
@@ -10,6 +6,21 @@
   align-items: center;
   height: 100vh;
 }
+.example-card {
+  max-width: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.mat-card-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
 
 
 @media screen and (max-width: 767px) {
