some graphics mods on input & list

--- a/src/app/stock-input/stock-input.component.html
+++ b/src/app/stock-input/stock-input.component.html
@@ -5,6 +5,6 @@
 
   </mat-form-field>
   <button mat-fab matSuffix color="primary" class="thickerButton" (click)="fetchStockProfileAndQuote()">
-    <mat-icon>search</mat-icon> </button>
+    <mat-icon>add</mat-icon> </button>
 
 </div>
