--- a/src/app/stock-details/stock-details.component.css
+++ b/src/app/stock-details/stock-details.component.css
@@ -1,30 +1,58 @@
-.container{
+.container {
   display: flex;
   justify-content: center;
-
-  gap: 20px;
   align-items: center;
-  height: 100vh;
+  flex-direction: column;
+  height:100vh;
 }
+
+
+
+.example-header-image {
+  background-size:cover;
+}
+
 .example-card {
   max-width: 400px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
+  padding: 20px;
+  margin-bottom: 20px;
+  background-color: #E7F0FF;
 }
 
+.left-side {
+  justify-content: flex-start;
+  text-align: left;
+  align-self: flex-start;
+}
+
+.example-card-profile {
+  max-width: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 20px;
+  margin-bottom: 20px;
+
+}
 
 .mat-card-content {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 
+@media screen and (min-width: 768px) {
+.group-card {
+  display: flex;
+}
 
-
-
-@media screen and (max-width: 767px) {
-  .container {
-    flex-direction: column;
-  }
 }
