comment and fix some name

--- a/src/app/stock-input/stock-input.component.html
+++ b/src/app/stock-input/stock-input.component.html
@@ -4,7 +4,7 @@
     <input matInput value="Insert Thicker" [(ngModel)]="symbol" placeholder="Insert Thicker">
 
   </mat-form-field>
-  <button mat-fab matSuffix color="primary" class="thickerButton" (click)="fetchStockProfileAndQuote()">
+  <button mat-fab matSuffix color="primary" class="thickerButton" (click)="addStock()">
     <mat-icon>search</mat-icon> </button>
 
 </div>
