--- a/src/app/stocklist/stocklist.component.html
+++ b/src/app/stocklist/stocklist.component.html
@@ -1,7 +1,10 @@
 <title>Stock Watch</title>
 <div class="container">
   <h1 style="background-image: url('https://ibb.co/PtRty4g')">STOCK WATCH</h1>
+  <!-- input -->
   <app-stock-input></app-stock-input>
+
+  <!-- Lista di card tramite ngFor -->
   <mat-card *ngFor="let stock of stocks$ | async" class="example-card">
     <button mat-icon-button color="warn" class="delete-button" (click)="deleteStock(stock)">X</button>
     <mat-card-header>
