--- a/src/app/stock-input/stock-input.component.css
+++ b/src/app/stock-input/stock-input.component.css
@@ -1,6 +1,17 @@
 .tickerFormField{
   margin-right: 10px;
   margin-bottom: 10px;
-  width: 230px;
+  width: 130px;
+  gap:20px;
   position: relative;
+}
+
+@media screen and (min-width: 768px) {
+.tickerFormField{
+  margin-right: 10px;
+  margin-bottom: 10px;
+  width: 20vh;
+  gap: 40px;
+  position: relative;
+}
 }
