--- a/src/app/stocklist/stocklist.component.css
+++ b/src/app/stocklist/stocklist.component.css
@@ -2,13 +2,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  height: 100vh;
+  margin-top: 50px;
+  min-height: 100vh;
 }
 
 .example-card {
   margin-bottom: 10px;
-  max-width: 400px;
+  width: 300px;
   position: relative;
 }
 
@@ -24,7 +24,7 @@
 }
 
 .center-card button {
-  margin-top: 10px; /* Aggiungi un margine superiore se necessario */
+  margin-top: 10px;
 }
 
 .example-card button.delete-button {
@@ -32,3 +32,23 @@
   top: 5px;
   right: 5px;
 }
+
+.logo-font{
+  font-size: 4vh;
+  color: #673ab7;
+  text-align: center;
+  margin: 5vh;
+}
+
+@media screen and (min-width: 768px) {
+  .group-card{
+    display: flex;
+    row-gap: 10px;
+    column-gap: 20px;
+    margin: 20px;
+    max-height: 100vh;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
+
