--- a/src/app/stock-details/stock-details.component.css
+++ b/src/app/stock-details/stock-details.component.css
@@ -21,7 +21,7 @@
   text-align: center;
   padding: 20px;
   margin-bottom: 20px;
-  background-color: #E7F0FF;
+  background-color: #ede7ff;
 }
 
 .left-side {
