--- a/src/app/stocklist/stocklist.component.html
+++ b/src/app/stocklist/stocklist.component.html
@@ -1,6 +1,7 @@
 <title>Stock Watch</title>
 
 <div class="container">
+  <img src="https://i.ibb.co/CssP7Wj/logoSW.png" alt="logoSW" class="img-logo">
   <h1 class="logo-font">STOCK WATCH</h1>
   <app-stock-input></app-stock-input>
   <div class="group-card">
