--- a/src/app/stock-input/stock-input.component.html
+++ b/src/app/stock-input/stock-input.component.html
@@ -1,10 +1,10 @@
 <div class="input-container">
   <mat-form-field class="tickerFormField">
-    <mat-label >Stocks</mat-label>
+    <mat-label>Stock</mat-label>
     <input matInput value="Insert Thicker" [(ngModel)]="symbol" placeholder="Insert Thicker">
   </mat-form-field>
 
-  <button mat-fab matSuffix color="primary" class="thickerButton" (click)="fetchStockProfileAndQuote()">
+  <button mat-fab matSuffix color="primary" class="thickerButton" (click)="addStock()">
     <mat-icon>add</mat-icon> </button>
 
 </div>
